// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`0B-ExtendCapsule fetchCapsuleRelations 1`] = `
{
  "capsuleInfo": {
    "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule": {},
  },
  "extends": {},
  "found":   
Set {
    "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule",
  }
,
  "mappings": {
    "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule": [
      {
        "delegate": "#@stream44.studio/encapsulate/structs/Capsule",
        "propName": "#@stream44.studio/encapsulate/structs/Capsule",
        "target": "@stream44.studio/encapsulate/structs/Capsule",
      },
    ],
  },
  "properties": {
    "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule": [
      {
        "pcOptions": null,
        "propName": "alias",
        "propertyContract": "#",
        "propertyContractDelegate": "",
        "propertyContractUri": "",
        "propertyType": "CapsulePropertyTypes.String",
        "valueExpression": "'extended'",
      },
      {
        "pcOptions": null,
        "propName": "#@stream44.studio/encapsulate/structs/Capsule",
        "propertyContract": "#",
        "propertyContractDelegate": "#@stream44.studio/encapsulate/structs/Capsule",
        "propertyContractUri": "",
        "propertyType": "CapsulePropertyTypes.Mapping",
        "valueExpression": ""@stream44.studio/encapsulate/structs/Capsule"",
      },
    ],
  },
}
`;

exports[`0B-ExtendCapsule fetchInstanceRelations 1`] = `
{
  "capsuleInfo": {
    "@stream44.studio/encapsulate/structs/Capsule:18": {
      "capsuleName": "@stream44.studio/encapsulate/structs/Capsule",
      "capsuleSourceUriLineRef": "@stream44.studio/encapsulate/structs/Capsule:18",
    },
    "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule:20": {
      "capsuleName": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule",
      "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule:20",
    },
    "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/caps/ParentCapsule:28": {
      "capsuleName": "@stream44.studio/FramespaceGenesis/models/Encapsulate/CapsuleSpine/examples/01-TreeRelationships/caps/ParentCapsule",
      "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/caps/ParentCapsule:28",
    },
  },
  "instances": {
    "@stream44.studio/encapsulate/structs/Capsule:18": {
      "capsuleName": "@stream44.studio/encapsulate/structs/Capsule",
      "capsuleSourceUriLineRef": "@stream44.studio/encapsulate/structs/Capsule:18",
    },
    "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule:20": {
      "capsuleName": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule",
      "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule:20",
    },
    "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/caps/ParentCapsule:28": {
      "capsuleName": "@stream44.studio/FramespaceGenesis/models/Encapsulate/CapsuleSpine/examples/01-TreeRelationships/caps/ParentCapsule",
      "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/caps/ParentCapsule:28",
    },
  },
  "parentMap": {
    "@stream44.studio/encapsulate/structs/Capsule:18": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/caps/ParentCapsule:28",
    "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/caps/ParentCapsule:28": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule:20",
  },
}
`;

exports[`0B-ExtendCapsule getCapsuleNamesBySpineTree 1`] = `
[
  "@stream44.studio/encapsulate/structs/Capsule",
  "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule",
  "@stream44.studio/FramespaceGenesis/models/Encapsulate/CapsuleSpine/examples/01-TreeRelationships/caps/ParentCapsule",
]
`;

exports[`0B-ExtendCapsule getCapsuleSpineTree_data 1`] = `
[
  {
    "p": {
      "declarationLine": -1,
      "definitionEndLine": -1,
      "definitionStartLine": -1,
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule.ts:20::prop::#@stream44.studio/encapsulate/structs/Capsule",
      "mappedModuleUri": "@stream44.studio/encapsulate/structs/Capsule",
      "name": "#@stream44.studio/encapsulate/structs/Capsule",
      "propertyContractDelegate": "#@stream44.studio/encapsulate/structs/Capsule",
      "propertyContractId": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule.ts:20::pc::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0::#",
      "propertyType": "CapsulePropertyTypes.Mapping",
      "valueExpression": ""@stream44.studio/encapsulate/structs/Capsule"",
      "valueType": "string",
    },
    "pc": {
      "contractKey": "#",
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule.ts:20::pc::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0::#",
      "options": null,
      "propertyContractUri": "",
      "spineContractId": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule.ts:20::spine::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
    },
    "s": {
      "contractUri": "@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule.ts:20::spine::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
    },
  },
  {
    "p": {
      "declarationLine": 11,
      "definitionEndLine": 14,
      "definitionStartLine": 11,
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule.ts:20::prop::alias",
      "mappedModuleUri": "",
      "name": "alias",
      "propertyContractDelegate": "",
      "propertyContractId": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule.ts:20::pc::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0::#",
      "propertyType": "CapsulePropertyTypes.String",
      "valueExpression": "'extended'",
      "valueType": "string",
    },
    "pc": {
      "contractKey": "#",
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule.ts:20::pc::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0::#",
      "options": null,
      "propertyContractUri": "",
      "spineContractId": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule.ts:20::spine::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
    },
    "s": {
      "contractUri": "@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule.ts:20::spine::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
    },
  },
  {
    "p": null,
    "pc": {
      "contractKey": "#@stream44.studio/encapsulate/structs/Capsule",
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule.ts:20::pc::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0::#@stream44.studio/encapsulate/structs/Capsule",
      "options": null,
      "propertyContractUri": "@stream44.studio/encapsulate/structs/Capsule",
      "spineContractId": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule.ts:20::spine::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
    },
    "s": {
      "contractUri": "@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule.ts:20::spine::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
    },
  },
]
`;

exports[`0B-ExtendCapsule getCapsuleWithSource 1`] = `
{
  "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule:20": {
    "cacheBustVersion": 21,
    "capsuleName": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule",
    "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule:20",
    "cstFilepath": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/.~o/encapsulate.dev/static-analysis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule.ts:20.csts.json",
    "spineInstanceTreeId": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule",
  },
  "source": {
    "capsuleName": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule",
    "declarationLine": 7,
    "definitionEndLine": 17,
    "definitionStartLine": 7,
    "extendsCapsule": "./caps/ParentCapsule",
    "extendsCapsuleUri": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/caps/ParentCapsule",
    "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule.ts:20::source",
    "importStackLine": 20,
    "moduleUri": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule",
    "optionsEndLine": 22,
    "optionsStartLine": 17,
  },
}
`;

exports[`0B-ExtendCapsule getChildInstances 1`] = `
[
  {
    "capsuleName": "@stream44.studio/FramespaceGenesis/models/Encapsulate/CapsuleSpine/examples/01-TreeRelationships/caps/ParentCapsule",
    "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/caps/ParentCapsule:28",
  },
]
`;

exports[`0B-ExtendCapsule getInstancesBySpineTree 1`] = `
[
  {
    "capsuleName": "@stream44.studio/encapsulate/structs/Capsule",
    "capsuleSourceUriLineRef": "@stream44.studio/encapsulate/structs/Capsule:18",
  },
  {
    "capsuleName": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule",
    "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule:20",
  },
  {
    "capsuleName": "@stream44.studio/FramespaceGenesis/models/Encapsulate/CapsuleSpine/examples/01-TreeRelationships/caps/ParentCapsule",
    "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/caps/ParentCapsule:28",
  },
]
`;

exports[`0B-ExtendCapsule getRootInstance 1`] = `
{
  "capsuleName": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule",
  "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule:20",
}
`;

exports[`0B-ExtendCapsule listCapsules 1`] = `
[
  {
    "capsuleName": "@stream44.studio/encapsulate/structs/Capsule",
  },
  {
    "capsuleName": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule",
  },
  {
    "capsuleName": "@stream44.studio/FramespaceGenesis/models/Encapsulate/CapsuleSpine/examples/01-TreeRelationships/caps/ParentCapsule",
  },
]
`;

exports[`0B-ExtendCapsule listSpineInstanceTrees 1`] = `
[
  {
    "capsuleName": "@stream44.studio/encapsulate/structs/Capsule",
    "capsuleSourceUriLineRef": "@stream44.studio/encapsulate/structs/Capsule:18",
    "spineInstanceTreeId": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule",
  },
  {
    "capsuleName": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule",
    "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule:20",
    "spineInstanceTreeId": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule",
  },
  {
    "capsuleName": "@stream44.studio/FramespaceGenesis/models/Encapsulate/CapsuleSpine/examples/01-TreeRelationships/caps/ParentCapsule",
    "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/caps/ParentCapsule:28",
    "spineInstanceTreeId": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0B-ExtendCapsule",
  },
]
`;
